[fix bug 1361189] Set z-index on editor.

--- a/widget/datatable/src/css/datatable-core.css
+++ b/widget/datatable/src/css/datatable-core.css
@@ -39,5 +39,5 @@ th .yui-dt-resizer {
 }
 
 .yui-dt-editor {
-    position:absolute;
+    position:absolute;z-index:9000;
 }
